--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [tool.poetry]
-name = "zchat-dev"
+name = "zchat"
 version = "0.1.0"
 description = ""
 authors = ["Zubayer Rahaman <zubayer.skd@gmail.com>"]
 readme = "README.md"
-packages = [{include = "zchat_dev"}]
 
 [tool.poetry.dependencies]
 python = "^3.7"
