--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^3.1.0"
 gunicorn = "^20.1.0"
 whitenoise = {extras = ["brotli"], version = "^6.2.0"}
 agora-token-builder = "^1.0.0"
+pathlib2 = "^2.3.7.post1"
 
 
 [build-system]
